# Scorch-V

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.bat
GLFW/include/GLFW/: glfw3.h
GLFW/lib/: glfw3.lib
res/glsl/: circle.frag  shader.frag  shader.vert
res/spir-v/: circleFrag.spv  frag.spv  vert.spv
src/: main.cpp
src/ScorchVkEngine/: ScorchV.cpp  ScorchV.h  ValidationLayers.cpp
src/ScorchVkEngine/Abstractions/: DeviceManager.cpp  DeviceManager.h  GuiManager.cpp  GuiManager.h  PresentationManager.cpp  PresentationManager.h  ValidationLayers.cpp  ValidationLayers.h  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h
src/ScorchVkEngine/Abstractions/Rendering/: BufferManager.cpp  BufferManager.h  Shader.cpp  Shader.h
src/ScorchVkEngine/Abstractions/Rendering/Objects/: MeshObject.cpp  MeshObject.h  PhysicsHeader.h
